--- a/EraWorld/app/src/main/res/values/colors.xml
+++ b/EraWorld/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="colorPrimary">#49817e</color>
+    <color name="colorPrimaryDark">#193735</color>
+    <color name="colorAccent">#2C4C4A</color>
+
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +13,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_grey">#B1ADAD</color>
+
+
 </resources>
